# reversa-plug-estoque-clone

.reversa/: active-requirements.json  config.toml  plan.md  setup.json  state.json
.reversa/_config/: files-manifest.json  manifest.yaml
_reversa_sdd/: ideation.md  newproject-brief.md  personas.md  prd.md
_reversa_sdd/sdd/: autenticacao-e-contas.md  (+7 more)
connector-service/: .env.example  ARCHITECTURE.md  DEPLOY_COOLIFY.md  DEPLOY_PORTAINER.md  Dockerfile  ENVIRONMENT_VARIABLES.md  PRODUCTION_CHECKLIST.md  README.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml
connector-service/alembic/: env.py
connector-service/alembic/versions/: 001_initial_tables.py
connector-service/app/: config.py  main.py
connector-service/app/api/: deps.py
connector-service/app/api/routes/: distributors.py  import_csv.py  logs.py  products.py
connector-service/app/connectors/: base.py  csv_import.py  dpk.py  furacao.py  laquila_drive.py  pellegrino.py  registry.py  rolemarmaster.py  rufato.py
connector-service/app/db/: session.py
connector-service/app/models/: connector_log.py  distributor.py  product.py
connector-service/app/repositories/: distributor_repo.py  log_repo.py  product_repo.py
connector-service/app/schemas/: connector_log.py  distributor.py  product.py
connector-service/app/services/: connector_runner.py  encryption.py  photo_storage.py  scheduler.py
connector-service/scripts/: rls_policies.sql
connector-service/tests/: conftest.py
connector-service/tests/test_connectors/: test_base.py
connector-service/tests/test_services/: test_encryption.py
(+11 files in other folders)
